--- a/my-app/src/App/Header/UserAccount/userAccount.css
+++ b/my-app/src/App/Header/UserAccount/userAccount.css
@@ -8,6 +8,7 @@
     font-size: 16px;
     color: #979797;
     font-family: 'Roboto', sans-serif;
+    cursor: pointer;
 }
 
 .user__avatar {
@@ -17,4 +18,5 @@
     background-repeat: no-repeat;
     background-size: cover;
     margin-left: 20px;
+    cursor: pointer;
 }
